package com.medianet.programme.entity;

public enum ProgrammeStatus {
    DRAFT,
    OPEN,
    IN_PROGRESS,
    EVALUATION,
    CLOSED,
    CANCELLED,
    ARCHIVED
}
